Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CORCHETEDER
    CORCHETEIZQ
    DOSPUNTOS
    NEGACION
    OR
    PUNTO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_funciones
Rule 2     lista_funciones -> funcion
Rule 3     lista_funciones -> funcion lista_funciones
Rule 4     funcion -> INICIO PARENIZQ PARENDER bloque
Rule 5     funcion -> FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
Rule 6     funcion -> FUNCION IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
Rule 7     funcion -> FUNCION tipo IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
Rule 8     lista_params -> <empty>
Rule 9     lista_params -> params_no_vacios
Rule 10    params_no_vacios -> param
Rule 11    params_no_vacios -> param COMA params_no_vacios
Rule 12    param -> tipo IDENTIFICADOR
Rule 13    tipo -> NUMERO
Rule 14    tipo -> DECIMAL
Rule 15    tipo -> BOOLEANO
Rule 16    tipo -> CADENA
Rule 17    bloque -> LLAVEIZQ sentencias LLAVEDER
Rule 18    abrir_ambito_funcion -> <empty>
Rule 19    abrir_ambito -> <empty>
Rule 20    cerrar_ambito -> <empty>
Rule 21    sentencias -> sentencia
Rule 22    sentencias -> sentencia sentencias
Rule 23    sentencia -> tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 24    sentencia -> tipo IDENTIFICADOR PUNTOYCOMA
Rule 25    sentencia -> IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
Rule 26    OP_ASIG -> IGUAL
Rule 27    OP_ASIG -> SUMA_IGUAL
Rule 28    OP_ASIG -> RESTA_IGUAL
Rule 29    OP_ASIG -> MULT_IGUAL
Rule 30    OP_ASIG -> DIV_IGUAL
Rule 31    sentencia -> IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
Rule 32    args -> <empty>
Rule 33    args -> lista_args
Rule 34    lista_args -> expresion
Rule 35    lista_args -> expresion COMA lista_args
Rule 36    expresion -> expresion SUMA expresion
Rule 37    expresion -> expresion RESTA expresion
Rule 38    expresion -> expresion MULT expresion
Rule 39    expresion -> expresion DIV expresion
Rule 40    expresion -> expresion MOD expresion
Rule 41    expresion -> expresion IGUAL_IGUAL expresion
Rule 42    expresion -> expresion DIFERENTE expresion
Rule 43    expresion -> expresion MAYOR expresion
Rule 44    expresion -> expresion MENOR expresion
Rule 45    expresion -> expresion MAYOR_IGUAL expresion
Rule 46    expresion -> expresion MENOR_IGUAL expresion
Rule 47    expresion -> PARENIZQ expresion PARENDER
Rule 48    expresion -> literal
Rule 49    expresion -> IDENTIFICADOR
Rule 50    expresion -> llamada_funcion_expr
Rule 51    literal -> NUMERO
Rule 52    literal -> DECIMAL
Rule 53    literal -> CADENA
Rule 54    literal -> VERDADERO
Rule 55    literal -> FALSO
Rule 56    llamada_funcion_expr -> IDENTIFICADOR PARENIZQ args PARENDER
Rule 57    sentencia -> SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
Rule 58    sentencia -> SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
Rule 59    sentencia -> MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
Rule 60    sentencia -> REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
Rule 61    sentencia -> PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
Rule 62    for_init -> tipo IDENTIFICADOR IGUAL expresion
Rule 63    for_init -> IDENTIFICADOR OP_ASIG expresion
Rule 64    for_init -> empty
Rule 65    for_update -> IDENTIFICADOR OP_ASIG expresion
Rule 66    for_update -> empty
Rule 67    empty -> <empty>
Rule 68    sentencia -> MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
Rule 69    sentencia -> REGRESA expresion PUNTOYCOMA
Rule 70    sentencia -> expresion PUNTOYCOMA
Rule 71    sentencia -> BREAK PUNTOYCOMA
Rule 72    sentencia -> CONTINUE PUNTOYCOMA

Terminals, with rules where they appear

AND                  : 
BOOLEANO             : 15
BREAK                : 71
CADENA               : 16 53
COMA                 : 11 35
CONTINUE             : 72
CORCHETEDER          : 
CORCHETEIZQ          : 
DECIMAL              : 14 52
DIFERENTE            : 42
DIV                  : 39
DIV_IGUAL            : 30
DOSPUNTOS            : 
FALSO                : 55
FUNCION              : 5 6 7
HASTA                : 60
IDENTIFICADOR        : 5 6 7 12 23 24 25 31 49 56 62 63 65
IGUAL                : 23 26 62
IGUAL_IGUAL          : 41
INICIO               : 4
LLAVEDER             : 17
LLAVEIZQ             : 17
MAYOR                : 43
MAYOR_IGUAL          : 45
MENOR                : 44
MENOR_IGUAL          : 46
MIENTRAS             : 59
MOD                  : 40
MOSTRAR              : 68
MULT                 : 38
MULT_IGUAL           : 29
NEGACION             : 
NUMERO               : 13 51
OR                   : 
PARA                 : 61
PARENDER             : 4 5 6 7 31 47 56 57 58 59 60 61 68
PARENIZQ             : 4 5 6 7 31 47 56 57 58 59 60 61 68
PUNTO                : 
PUNTOYCOMA           : 23 24 25 31 60 61 61 68 69 70 71 72
REGRESA              : 69
REPETIR              : 60
RESTA                : 37
RESTA_IGUAL          : 28
SI                   : 57 58
SINO                 : 58
SUMA                 : 36
SUMA_IGUAL           : 27
VERDADERO            : 54
error                : 

Nonterminals, with rules where they appear

OP_ASIG              : 25 63 65
abrir_ambito         : 57 58 58 59 60 61
abrir_ambito_funcion : 5 6 7
args                 : 31 56
bloque               : 4 5 6 7 57 58 58 59 60 61
cerrar_ambito        : 5 6 7 57 58 58 59 60 61
empty                : 64 66
expresion            : 23 25 34 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 57 58 59 60 61 62 63 65 68 69 70
for_init             : 61
for_update           : 61
funcion              : 2 3
lista_args           : 33 35
lista_funciones      : 1 3
lista_params         : 5
literal              : 48
llamada_funcion_expr : 50
param                : 10 11
params_no_vacios     : 9 11
programa             : 0
sentencia            : 21 22
sentencias           : 17 22
tipo                 : 7 12 23 24 62

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_funciones
    (2) lista_funciones -> . funcion
    (3) lista_funciones -> . funcion lista_funciones
    (4) funcion -> . INICIO PARENIZQ PARENDER bloque
    (5) funcion -> . FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) funcion -> . FUNCION IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (7) funcion -> . FUNCION tipo IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito

    INICIO          shift and go to state 4
    FUNCION         shift and go to state 5

    programa                       shift and go to state 1
    lista_funciones                shift and go to state 2
    funcion                        shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_funciones .

    $end            reduce using rule 1 (programa -> lista_funciones .)


state 3

    (2) lista_funciones -> funcion .
    (3) lista_funciones -> funcion . lista_funciones
    (2) lista_funciones -> . funcion
    (3) lista_funciones -> . funcion lista_funciones
    (4) funcion -> . INICIO PARENIZQ PARENDER bloque
    (5) funcion -> . FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) funcion -> . FUNCION IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (7) funcion -> . FUNCION tipo IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito

    $end            reduce using rule 2 (lista_funciones -> funcion .)
    INICIO          shift and go to state 4
    FUNCION         shift and go to state 5

    funcion                        shift and go to state 3
    lista_funciones                shift and go to state 6

state 4

    (4) funcion -> INICIO . PARENIZQ PARENDER bloque

    PARENIZQ        shift and go to state 7


state 5

    (5) funcion -> FUNCION . IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) funcion -> FUNCION . IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (7) funcion -> FUNCION . tipo IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (13) tipo -> . NUMERO
    (14) tipo -> . DECIMAL
    (15) tipo -> . BOOLEANO
    (16) tipo -> . CADENA

    IDENTIFICADOR   shift and go to state 8
    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 11
    BOOLEANO        shift and go to state 12
    CADENA          shift and go to state 13

    tipo                           shift and go to state 9

state 6

    (3) lista_funciones -> funcion lista_funciones .

    $end            reduce using rule 3 (lista_funciones -> funcion lista_funciones .)


state 7

    (4) funcion -> INICIO PARENIZQ . PARENDER bloque

    PARENDER        shift and go to state 14


state 8

    (5) funcion -> FUNCION IDENTIFICADOR . PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) funcion -> FUNCION IDENTIFICADOR . PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENIZQ        shift and go to state 15


state 9

    (7) funcion -> FUNCION tipo . IDENTIFICADOR PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito

    IDENTIFICADOR   shift and go to state 16


state 10

    (13) tipo -> NUMERO .

    IDENTIFICADOR   reduce using rule 13 (tipo -> NUMERO .)


state 11

    (14) tipo -> DECIMAL .

    IDENTIFICADOR   reduce using rule 14 (tipo -> DECIMAL .)


state 12

    (15) tipo -> BOOLEANO .

    IDENTIFICADOR   reduce using rule 15 (tipo -> BOOLEANO .)


state 13

    (16) tipo -> CADENA .

    IDENTIFICADOR   reduce using rule 16 (tipo -> CADENA .)


state 14

    (4) funcion -> INICIO PARENIZQ PARENDER . bloque
    (17) bloque -> . LLAVEIZQ sentencias LLAVEDER

    LLAVEIZQ        shift and go to state 18

    bloque                         shift and go to state 17

state 15

    (5) funcion -> FUNCION IDENTIFICADOR PARENIZQ . lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) funcion -> FUNCION IDENTIFICADOR PARENIZQ . PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (8) lista_params -> .
    (9) lista_params -> . params_no_vacios
    (10) params_no_vacios -> . param
    (11) params_no_vacios -> . param COMA params_no_vacios
    (12) param -> . tipo IDENTIFICADOR
    (13) tipo -> . NUMERO
    (14) tipo -> . DECIMAL
    (15) tipo -> . BOOLEANO
    (16) tipo -> . CADENA

  ! shift/reduce conflict for PARENDER resolved as shift
    PARENDER        shift and go to state 20
    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 11
    BOOLEANO        shift and go to state 12
    CADENA          shift and go to state 13

  ! PARENDER        [ reduce using rule 8 (lista_params -> .) ]

    lista_params                   shift and go to state 19
    params_no_vacios               shift and go to state 21
    param                          shift and go to state 22
    tipo                           shift and go to state 23

state 16

    (7) funcion -> FUNCION tipo IDENTIFICADOR . PARENIZQ PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENIZQ        shift and go to state 24


state 17

    (4) funcion -> INICIO PARENIZQ PARENDER bloque .

    INICIO          reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)
    FUNCION         reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)
    $end            reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)


state 18

    (17) bloque -> LLAVEIZQ . sentencias LLAVEDER
    (21) sentencias -> . sentencia
    (22) sentencias -> . sentencia sentencias
    (23) sentencia -> . tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (24) sentencia -> . tipo IDENTIFICADOR PUNTOYCOMA
    (25) sentencia -> . IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
    (31) sentencia -> . IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
    (57) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (58) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
    (59) sentencia -> . MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (60) sentencia -> . REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
    (61) sentencia -> . PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
    (68) sentencia -> . MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
    (69) sentencia -> . REGRESA expresion PUNTOYCOMA
    (70) sentencia -> . expresion PUNTOYCOMA
    (71) sentencia -> . BREAK PUNTOYCOMA
    (72) sentencia -> . CONTINUE PUNTOYCOMA
    (13) tipo -> . NUMERO
    (14) tipo -> . DECIMAL
    (15) tipo -> . BOOLEANO
    (16) tipo -> . CADENA
    (36) expresion -> . expresion SUMA expresion
    (37) expresion -> . expresion RESTA expresion
    (38) expresion -> . expresion MULT expresion
    (39) expresion -> . expresion DIV expresion
    (40) expresion -> . expresion MOD expresion
    (41) expresion -> . expresion IGUAL_IGUAL expresion
    (42) expresion -> . expresion DIFERENTE expresion
    (43) expresion -> . expresion MAYOR expresion
    (44) expresion -> . expresion MENOR expresion
    (45) expresion -> . expresion MAYOR_IGUAL expresion
    (46) expresion -> . expresion MENOR_IGUAL expresion
    (47) expresion -> . PARENIZQ expresion PARENDER
    (48) expresion -> . literal
    (49) expresion -> . IDENTIFICADOR
    (50) expresion -> . llamada_funcion_expr
    (51) literal -> . NUMERO
    (52) literal -> . DECIMAL
    (53) literal -> . CADENA
    (54) literal -> . VERDADERO
    (55) literal -> . FALSO
    (56) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    IDENTIFICADOR   shift and go to state 28
    SI              shift and go to state 31
    MIENTRAS        shift and go to state 32
    REPETIR         shift and go to state 33
    PARA            shift and go to state 34
    MOSTRAR         shift and go to state 35
    REGRESA         shift and go to state 36
    BREAK           shift and go to state 37
    CONTINUE        shift and go to state 38
    NUMERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    BOOLEANO        shift and go to state 12
    CADENA          shift and go to state 41
    PARENIZQ        shift and go to state 30
    VERDADERO       shift and go to state 44
    FALSO           shift and go to state 45

    sentencias                     shift and go to state 25
    sentencia                      shift and go to state 26
    tipo                           shift and go to state 27
    expresion                      shift and go to state 29
    literal                        shift and go to state 42
    llamada_funcion_expr           shift and go to state 43

state 19

    (5) funcion -> FUNCION IDENTIFICADOR PARENIZQ lista_params . PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENDER        shift and go to state 46


state 20

    (6) funcion -> FUNCION IDENTIFICADOR PARENIZQ PARENDER . abrir_ambito_funcion bloque cerrar_ambito
    (18) abrir_ambito_funcion -> .

    LLAVEIZQ        reduce using rule 18 (abrir_ambito_funcion -> .)

    abrir_ambito_funcion           shift and go to state 47

state 21

    (9) lista_params -> params_no_vacios .

    PARENDER        reduce using rule 9 (lista_params -> params_no_vacios .)


state 22

    (10) params_no_vacios -> param .
    (11) params_no_vacios -> param . COMA params_no_vacios

    PARENDER        reduce using rule 10 (params_no_vacios -> param .)
    COMA            shift and go to state 48


state 23

    (12) param -> tipo . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 49


state 24

    (7) funcion -> FUNCION tipo IDENTIFICADOR PARENIZQ . PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENDER        shift and go to state 50


state 25

    (17) bloque -> LLAVEIZQ sentencias . LLAVEDER

    LLAVEDER        shift and go to state 51


state 26

    (21) sentencias -> sentencia .
    (22) sentencias -> sentencia . sentencias
    (21) sentencias -> . sentencia
    (22) sentencias -> . sentencia sentencias
    (23) sentencia -> . tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (24) sentencia -> . tipo IDENTIFICADOR PUNTOYCOMA
    (25) sentencia -> . IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
    (31) sentencia -> . IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
    (57) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (58) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
    (59) sentencia -> . MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (60) sentencia -> . REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
    (61) sentencia -> . PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
    (68) sentencia -> . MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
    (69) sentencia -> . REGRESA expresion PUNTOYCOMA
    (70) sentencia -> . expresion PUNTOYCOMA
    (71) sentencia -> . BREAK PUNTOYCOMA
    (72) sentencia -> . CONTINUE PUNTOYCOMA
    (13) tipo -> . NUMERO
    (14) tipo -> . DECIMAL
    (15) tipo -> . BOOLEANO
    (16) tipo -> . CADENA
    (36) expresion -> . expresion SUMA expresion
    (37) expresion -> . expresion RESTA expresion
    (38) expresion -> . expresion MULT expresion
    (39) expresion -> . expresion DIV expresion
    (40) expresion -> . expresion MOD expresion
    (41) expresion -> . expresion IGUAL_IGUAL expresion
    (42) expresion -> . expresion DIFERENTE expresion
    (43) expresion -> . expresion MAYOR expresion
    (44) expresion -> . expresion MENOR expresion
    (45) expresion -> . expresion MAYOR_IGUAL expresion
    (46) expresion -> . expresion MENOR_IGUAL expresion
    (47) expresion -> . PARENIZQ expresion PARENDER
    (48) expresion -> . literal
    (49) expresion -> . IDENTIFICADOR
    (50) expresion -> . llamada_funcion_expr
    (51) literal -> . NUMERO
    (52) literal -> . DECIMAL
    (53) literal -> . CADENA
    (54) literal -> . VERDADERO
    (55) literal -> . FALSO
    (56) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    LLAVEDER        reduce using rule 21 (sentencias -> sentencia .)
    IDENTIFICADOR   shift and go to state 28
    SI              shift and go to state 31
    MIENTRAS        shift and go to state 32
    REPETIR         shift and go to state 33
    PARA            shift and go to state 34
    MOSTRAR         shift and go to state 35
    REGRESA         shift and go to state 36
    BREAK           shift and go to state 37
    CONTINUE        shift and go to state 38
    NUMERO          shift and go to state 39
    DECIMAL         shift and go to state 40
    BOOLEANO        shift and go to state 12
    CADENA          shift and go to state 41
    PARENIZQ        shift and go to state 30
    VERDADERO       shift and go to state 44
    FALSO           shift and go to state 45

    sentencia                      shift and go to state 26
    sentencias                     shift and go to state 52
    tipo                           shift and go to state 27
    expresion                      shift and go to state 29
    literal                        shift and go to state 42
    llamada_funcion_expr           shift and go to state 43

state 27

    (23) sentencia -> tipo . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (24) sentencia -> tipo . IDENTIFICADOR PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 53


state 28
